--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 
-
-  #overlay {
+body{
+    padding-left: 10px;
+}
+#overlay {
     position: fixed; /* Sit on top of the page content */
     display: none; /* Hidden by default */
     width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
+   height: 100%; /* Full height (cover the whole page) */
     top: 0;
     left: 0;
     right: 0;
@@ -16,7 +18,14 @@
   .required::after {
     content:"*";
     color: red;
+  
   }
+  .requried{
+      text-align: left;
+      border-style: solid;
+background-origin: padding-box;
+  }
+  
   .nav-item{
            
   }
@@ -71,3 +80,133 @@
     
 }
 /*Profile Pic End*/
+.field{
+    text-align: center;
+text-decoration-color: #2ca8ff;
+    cursor: pointer;
+    display: block;
+    height: 100%;
+    left: 0;
+   
+}
+#list{
+    color:black;
+background-color: red;
+}
+
+/* Include the padding and border in an element's total width and height */
+ /*{
+    box-sizing: border-box;
+  }*/
+  
+  /* Remove margins and padding from the list */
+  /*ul {
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* Style the list items */
+ /* ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background: #eee;
+    font-size: 18px;
+    transition: 0.2s;
+  
+    /* make the list items unselectable */
+    /*-webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Set all odd list items to a different color (zebra-stripes) */
+ /* ul li:nth-child(odd) {
+    background: #f9f9f9;
+  }
+  
+  /* Darker background-color on hover */
+ /*/ul li:hover {
+    background: #ddd;
+  
+  
+  /* When clicked on, add a background color and strike out text */
+ /* ul li.checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+  }
+  
+  /* Add a "checked" mark when clicked on */
+ /* ul li.checked::before {
+    content: '';
+    position: absolute;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;*/
+   /* top: 10px;
+    left: 16px;
+    transform: rotate(45deg);*/
+   /* height: 10px;*/
+   /*width: 7px;
+  }
+  
+  /* Style the close button */
+  .close {
+   position: left;
+   right: -50;
+    top: 0;
+   /* width: px;
+   /* padding: 12px 16px 12px 16px;*/
+  }
+  
+  .close:hover {
+    background-color: #fa1909;
+    color: rgb(250, 177, 177);
+    position: left;
+  }
+  
+  /* Style the header */
+ /*.header {
+    background-color: #f44336;
+   padding: 30px 40px;
+    color: white;
+    text-align: left;
+  }
+  
+  /* Clear floats after the header */
+  .header:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Style the input */
+  input {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    /*width: 75%;*/
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+  }
+  
+  /* Style the "Add" button */
+  .btn-default-addBtn {
+    padding: 10px;
+  /*  width: 25%;*/
+    background: #3472f7;
+    color: #555;
+    float: left;
+    text-align: left;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 0;
+  }
+  
+  .btn-default-addBtn:hover {
+    background-color: rgb(46, 66, 243);
+  }
